# lbm_cuda

./: .gitignore  CMakeLists.txt  README.md  lbm_cuda.sln
common/lib/x64/: freeglut_staticd.lib
common_update/lib/: glew32d.lib  libglew32d.lib
default/: default.vcxproj  kernel.cu  main.cpp
docs/: lbm_cuda.docx
fluidsGL/: fluidsGL.cpp  fluidsGL_kernels.cu  fluidsGL_kernels.h  fluidsGL_vs2019.vcxproj
lbm/: lbm.cpp  lbm.cu  lbm.cuh  lbm.h  lbm.vcxproj  lbm_delegate.cpp  lbm_delegate.cu  lbm_delegate.cuh  lbm_delegate.h  lbm_device.cuh  lbm_global.cuh  main.cpp
lbm_cuda/: CMakeLists.txt
lbm_cuda/common/lib/x64/: glew32s.lib  libglew32.lib
lbm_cuda/fluidsGL/: CMakeLists.txt  fluidsGL_vs2019.vcxproj
lbm_cuda/lbm/: CMakeLists.txt  d2q9.h  d2q9_delegate.cu  d2q9_delegate.h  d2q9_device.cuh  d2q9_global.cuh  d3q27.h  d3q27_delegate.cu  d3q27_delegate.h  d3q27_device.cuh  d3q27_global.cuh  lbm.h  lbm.vcxproj  lbm_delegate.cpp  lbm_delegate.cu  lbm_delegate.h  lbm_device.cuh  lbm_global.cuh  main.cpp
lbm_cuda/nbody/: CMakeLists.txt
lbm_cuda/oceanFFT/: CMakeLists.txt  oceanFFT.vcxproj
lbm_cuda/simpleGL/: CMakeLists.txt  simpleGL  simpleGL.cu  simpleGL.vcxproj
lighting/: lighting.vcxproj  lighting_2019.vcxproj  lighting_2019.vcxproj.filters  vsResourceLib.cpp
lighting/Debug/: vc142.idb
lighting/Debug/lighting.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lighting.lastbuildstate
lighting/Release/lighting.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lighting.lastbuildstate
lighting/x64/Debug/: vc142.idb
lighting/x64/Debug/lighting.tlog/: lighting.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lighting/x64/Debug/lighting_2019.tlog/: CL.read.1.tlog  CL.write.1.tlog  link.write.1.tlog
lighting_2019/: lighting_2019.cpp  lighting_2019.vcxproj  lighting_2019.vcxproj.filters
lighting_2019/x64/Debug/: vc142.idb
lighting_2019/x64/Debug/lighting.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
lighting_2019/x64/Debug/lighting_2019.tlog/: CL.command.1.tlog  link.command.1.tlog
nbody/: nbody.vcxproj
nbody/x64/Debug/: bodysystemcuda.cu-182528896.deps  bodysystemcuda.cu.cache  bodysystemcuda.cu1420281620.deps  vc142.idb
nbody/x64/Debug/nbody.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  nbody.write.1u.tlog
oceanFFT/: oceanFFT.vcxproj  oceanFFT_kernel.cu
oceanFFT/x64/Debug/: oceanFFT.cu-66745087.deps  oceanFFT_kernel.cu-473417134.deps  oceanFFT_kernel.cu.cache  vc142.idb
oceanFFT/x64/Debug/oceanFFT.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  oceanFFT.write.1u.tlog
simpleGL/: simpleGL.vcxproj
simpleGL/x64/Debug/: simpleGL.cu-1768234981.deps  simpleGL.cu.cache
simpleGL/x64/Debug/simpleGL.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  simpleGL.write.1u.tlog
